[gd_scene load_steps=10 format=2]

[ext_resource path="res://source/grow_context_full.gd" type="Script" id=1]
[ext_resource path="res://assets/level_single_pot.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/vogelzwitschern.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/growth1_noperc.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/pot.png" type="Texture" id=5]
[ext_resource path="res://assets/sound/shower.ogg" type="AudioStream" id=7]

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 41.61
flag_disable_z = true
gravity = Vector3( 0, 200, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.160784, 0.584314, 0.92549, 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

//void fragment() {
//	COLOR = vec4(0.0);
//}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Pot" type="Sprite" parent="."]
position = Vector2( 478.235, 625.011 )
texture = ExtResource( 5 )

[node name="WaterParticles2D" type="Particles2D" parent="Pot"]
position = Vector2( -6.1803, -623.7 )
emitting = false
amount = 512
lifetime = 2.5
one_shot = true
explosiveness = 0.11
randomness = 0.62
process_material = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Pot/WaterParticles2D"]
stream = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PlantRect" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
start = Vector2( 480, 580 )
branch_length = 4.0

[node name="ColorContainer" type="GridContainer" parent="."]
margin_left = 37.0
margin_top = 549.0
margin_right = 267.0
margin_bottom = 689.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitColorPickerButton" type="ColorPickerButton" parent="ColorContainer"]
margin_right = 60.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
color = Color( 0.854902, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitRadiusSlider" type="HSlider" parent="ColorContainer"]
margin_left = 70.0
margin_top = 12.0
margin_right = 230.0
margin_bottom = 28.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 4
max_value = 8.0
step = 0.5
value = 5.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeavesColorPickerButton" type="ColorPickerButton" parent="ColorContainer"]
margin_top = 50.0
margin_right = 60.0
margin_bottom = 90.0
rect_min_size = Vector2( 60, 40 )
color = Color( 0.113725, 0.654902, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeafRadiusSlider" type="HSlider" parent="ColorContainer"]
margin_left = 70.0
margin_top = 62.0
margin_right = 230.0
margin_bottom = 78.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 4
max_value = 4.0
step = 0.5
value = 3.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StemColorPickerButton" type="ColorPickerButton" parent="ColorContainer"]
margin_top = 100.0
margin_right = 60.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )
color = Color( 0.411765, 0.34902, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StemThicknessSlider" type="HSlider" parent="ColorContainer"]
margin_left = 70.0
margin_top = 112.0
margin_right = 230.0
margin_bottom = 128.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="color_changed" from="ColorContainer/FruitColorPickerButton" to="PlantRect" method="_on_FruitColorPickerButton_color_changed"]
[connection signal="value_changed" from="ColorContainer/FruitRadiusSlider" to="PlantRect" method="_on_FruitRadiusSlider_value_changed"]
[connection signal="color_changed" from="ColorContainer/LeavesColorPickerButton" to="PlantRect" method="_on_LeavesColorPickerButton_color_changed"]
[connection signal="value_changed" from="ColorContainer/LeafRadiusSlider" to="PlantRect" method="_on_LeafRadiusSlider_value_changed"]
[connection signal="color_changed" from="ColorContainer/StemColorPickerButton" to="PlantRect" method="_on_StemColorPickerButton_color_changed"]
[connection signal="value_changed" from="ColorContainer/StemThicknessSlider" to="PlantRect" method="_on_StemThicknessSlider_value_changed"]
[connection signal="timeout" from="Timer" to="PlantRect" method="_on_Timer_timeout"]
